--- a/index.html
+++ b/index.html
@@ -5,11 +5,31 @@
     </head>
     <body>
         <header>
-            <h1>Wireframe</h1>
+            <nav>
+                <ul>
+                    <li><img src="https://placehold.it/200x70/ddd" alt="" /></li>
+                    <li><a href="">Nav Item 1</a></li>
+                    <li><a href="">Nav Item 2</a></li>
+                    <li><a href="">Nav Item 3</a></li>
+                    <li><a href="">Nav Item 4</a></li>
+                </ul>
+            </nav>
         </header>
 
         <main>
+            <img src="https://placehold.it/960x450/ddd" alt="" />
+            <img src="https://placehold.it/300x375/ddd" alt="" />
+            <img src="https://placehold.it/300x375/ddd" alt="" />
+            <img src="https://placehold.it/300x375/ddd" alt="" />
+            <img src="https://placehold.it/480x400/ddd" alt="" />
 
+            <h3>Featured Section Heading</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia iste at reiciendis esse? Praesentium totam voluptatibus ab a dolor tempora repudiandae molestiae cupiditate explicabo molestias consequuntur accusamus dolores aliquam cumque ea id, dolorum exercitationem dolore temporibus laboriosam optio libero dolorem. Reiciendis, quaerat. Non cumque dolorem harum labore deserunt hic magni quae, omnis exercitationem repellendus iusto quisquam, at, consectetur praesentium vel dolor quidem corporis quos ducimus officia. Vel alias asperiores eius quam magni doloribus tempore esse iure, dolorem beatae fuga accusamus laudantium officiis impedit voluptates fugiat ullam tenetur. Iure quis soluta, facere molestias asperiores hic nulla placeat suscipit accusantium atque culpa sint ratione molestiae aliquam minima alias quibusdam? Odit ducimus necessitatibus incidunt quidem, temporibus quas deleniti atque perspiciatis accusamus cum officiis veniam animi ad laudantium voluptate fugiat magni ipsam consequuntur quibusdam? Vitae, explicabo numquam iusto cupiditate deleniti nihil harum fuga veniam magni incidunt, eveniet rem pariatur libero repellendus. Odit consectetur fugiat nam at, explicabo ex blanditiis earum id, placeat doloremque, pariatur aspernatur repellat natus dolor aperiam amet cupiditate illo iste tenetur! Praesentium aliquid distinctio pariatur ipsa ratione doloribus repellendus obcaecati quia. Iure doloremque quas fuga unde aliquid dignissimos quia! Quia eveniet quidem quisquam expedita aperiam earum dolores, voluptate minus veritatis, ea, fuga obcaecati voluptatem dolorum temporibus placeat praesentium architecto iure suscipit? Magni omnis maxime assumenda rerum dignissimos, cumque libero exercitationem quos dolores, quibusdam, est tenetur perferendis id inventore? Saepe ipsa necessitatibus vel ullam, rerum consequatur odio adipisci accusantium facere laborum sed porro quos placeat nulla sint! Sapiente, autem animi. Minus, delectus? Sint officiis illum hic porro cupiditate alias repellendus quia possimus explicabo placeat natus dicta, adipisci praesentium ratione molestiae ex labore delectus minima eum atque? Nisi sint magnam consequatur suscipit pariatur accusantium maxime, itaque placeat alias unde. Aliquam est et modi repellendus adipisci laborum earum facere alias, ex sequi numquam ducimus.</p>
+            <button>Call To Action</button>
+
+            <div>
+                
+            </div>
         </main>
 
         <footer>
